Add Redis implementation. Part IV
- Modifying kotlin files in order to compile. Learning how to convert java to kotlin code.